--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,23 @@ select::-webkit-inner-spin-button,
 select::-webkit-calendar-picker-indicator {
   margin-right: 20px;
 }
+
+/* Custom scrollbar */
+.audio-scroll::-webkit-scrollbar {
+  width: 8px; /* scrollbar thickness */
+}
+
+.audio-scroll::-webkit-scrollbar-track {
+  background: #ffe0a1;
+  border-radius: 10px;
+  margin-right: 14px;
+}
+
+.audio-scroll::-webkit-scrollbar-thumb {
+  background-color: #f97316; /* thumb color (orange) */
+  border-radius: 10px;
+}
+
+.audio-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #ea580c; /* darker orange on hover */
+}
